# burn_dragon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  burn.toml  cubecl.toml
crates/burn_dragon_checkpoint/: Cargo.toml
crates/burn_dragon_checkpoint/src/: bootstrap.rs  bundle.rs  lib.rs  parts.rs  policy.rs  precision.rs  run.rs
crates/burn_dragon_core/: Cargo.toml
crates/burn_dragon_core/src/: constants.rs  lib.rs  objective.rs  positional.rs
crates/burn_dragon_core/src/experimental/: mod.rs
crates/burn_dragon_core/src/kernel/: block_sparse.rs  linear_attention.rs  relu_lowrank.rs
crates/burn_dragon_core/src/model/: attention.rs  config.rs  dragon.rs  dragon_support.rs  halt.rs  init.rs  micro_transformer.rs  mod.rs  norm.rs  residual_stream.rs  state.rs  widen.rs
crates/burn_dragon_core/src/model/attention_residual/: block.rs  config.rs  history.rs  mod.rs  reference.rs  tests.rs
crates/burn_dragon_core/src/model/dragon/: auxiliary_memory.rs  connector.rs  continual_backprop.rs  diagnostics.rs  interpretability.rs  language_head.rs  language_pipeline.rs  sequence_dispatch.rs
crates/burn_dragon_core/src/model/init/: reservoir.rs
crates/burn_dragon_core/src/model/mhc/: coefficients.rs  config.rs  mod.rs  reference.rs  tests.rs
crates/burn_dragon_core/src/model/sequence/: config.rs  gdn2.rs  linear.rs  mamba.rs  mod.rs  state.rs
crates/burn_dragon_kernel/: Cargo.toml
crates/burn_dragon_kernel/src/: dense_causal_attention.rs  dense_causal_attention.wgsl  fusion_compat.rs  lib.rs  profiling.rs  recurrent.rs  recurrent.wgsl  relu_lowrank.rs  relu_lowrank.wgsl  relu_lowrank_grad_input.wgsl  relu_lowrank_grad_input_tiled.wgsl
crates/burn_dragon_kernel/src/dense_causal_attention/: backward_runtime.rs  forward_runtime.rs  tests.rs
crates/burn_dragon_kernel/src/recurrent/: backward_runtime.rs  forward_runtime.rs  tests.rs
crates/burn_dragon_kernel/src/relu_lowrank/: forward_runtime.rs  tests.rs
crates/burn_dragon_kernel/src/sequence/: linear.rs  mod.rs
crates/burn_dragon_kernel/src/sequence/gdn2/: custom_backward.rs  mod.rs  (+1 more)
crates/burn_dragon_language/: Cargo.toml
crates/burn_dragon_language/benches/: gdn2_sequence.rs  training_objectives.rs  universality_loader.rs
crates/burn_dragon_language/examples/: train_language.rs
crates/burn_dragon_language/src/: checkpoint.rs  generation.rs  inference.rs  lib.rs  loss.rs  stages.rs  summary_events.rs
crates/burn_dragon_language/src/config/: core.rs  merge.rs  mod.rs  train.rs
crates/burn_dragon_language/src/dataset/: factory.rs  huggingface.rs  mod.rs  prepared_chunks.rs  scheduler.rs  universality.rs
crates/burn_dragon_language/src/stages/: artifacts.rs  prepare.rs  tests.rs  types.rs
crates/burn_dragon_language/src/tokenizer/: mod.rs  pretokenized.rs
crates/burn_dragon_language/src/train/: backend.rs  continual_backprop.rs  events.rs  mod.rs  neuron_scaling.rs  objective.rs  prelude.rs  profile.rs  rerun.rs  schedule.rs  startup_autotune.rs  steps.rs  utils.rs
crates/burn_dragon_p2p/: Cargo.toml  README.md  build.rs
crates/burn_dragon_p2p/deploy/: README.md  burn-dragon-p2p-native.service  native-peer.toml.example
crates/burn_dragon_p2p/deploy/aws/: github-actions-iam.md
crates/burn_dragon_p2p/deploy/datasets/: README.md
crates/burn_dragon_p2p/deploy/profiles/: climbmix-r1.profile.json  climbmix-r1.training.toml  nca-r1-gdn2-allow-neg-eigval.training.toml  nca-r1-gdn2-full-chunk-wy.training.toml  nca-r1-gdn2-full-reference.training.toml  nca-r1-gdn2-head-scalar-decay.training.toml  nca-r1-gdn2-no-qk-l2norm.training.toml  nca-r1-gdn2-no-write-gate.training.toml  nca-r1-gdn2-scalar-erase.training.toml  nca-r1-linear-dense-score.training.toml  nca-r1-linear-reference.training.toml  nca-r1-mamba3-reference.training.toml  nca-r1.corpus.toml  nca-r1.profile.json  nca-r1.training.toml  reservoir-smoke.training.toml  ruliad-r1.corpus.toml  ruliad-r1.training.toml
crates/burn_dragon_p2p/src/: admin.rs  auth.rs  browser_data.rs  browser_record.rs  build_info.rs  capability.rs  config.rs  deployment.rs  lib.rs  logging.rs  manifests.rs  native.rs  native_runtime.rs  p2p_adapter.rs  profile.rs
crates/burn_dragon_p2p/src/capability_state/: mod.rs  native.rs  web.rs
crates/burn_dragon_p2p/src/experiments/: climbmix.rs  common.rs  mod.rs  nca.rs
crates/burn_dragon_p2p/src/wasm/: mod.rs  tests.rs  training.rs  ui_state.rs
crates/burn_dragon_p2p/tests/: native_training.rs
crates/burn_dragon_time/: Cargo.toml
crates/burn_dragon_time/src/: lib.rs
crates/burn_dragon_tokenizer/: Cargo.toml  README.md
crates/burn_dragon_tokenizer/src/: lib.rs
crates/burn_dragon_train/: Cargo.toml
crates/burn_dragon_train/benches/: training_events.rs
crates/burn_dragon_train/src/: constants.rs  device.rs  lib.rs  wgpu.rs
crates/burn_dragon_train/src/cli/: logging.rs  mod.rs
crates/burn_dragon_train/src/config/: artifacts.rs  continual_backprop.rs  core.rs  events.rs  mod.rs  optimizer.rs  run_layout.rs
crates/burn_dragon_train/src/train/: artifacts.rs  constants.rs  continual_backprop.rs  events.rs  metrics.rs  mod.rs  prelude.rs  runtime.rs  teacher.rs  test_support.rs
crates/burn_dragon_universality/: Cargo.toml
crates/burn_dragon_universality/benches/: ruliad.rs
crates/burn_dragon_universality/data/ruliad_seed/: proof_tasks.jsonl
crates/burn_dragon_universality/lean/ruliad_seed/: RuliadSeed.lean  lake-manifest.json  lakefile.lean
crates/burn_dragon_universality/src/: config.rs  generate.rs  lib.rs  manifest.rs  nca.rs  runtime.rs  stats.rs  tokenize.rs
crates/burn_dragon_universality/src/ruliad/: category.rs  cli.rs  config.rs  eca.rs  eval.rs  generate.rs  metrics.rs  mod.rs  oracles.rs  rng.rs  runtime.rs  search.rs  source_selection.rs  stable_json.rs  tokenize.rs  verification.rs
xtask/: Cargo.toml
xtask/assets/: bootstrap-inspect-commands.txt  live-browser-canary.mjs
xtask/src/: agent_task.rs  bootstrap_runtime.rs  bootstrap_settings.rs  browser_site.rs  deploy_settings.rs  local_browser_e2e.rs  main.rs  native_canary.rs  workflow_contracts.rs  workflow_tools.rs
(+102 files in other folders)
