[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
burn_p2p_app = { version = "=0.21.0-pre.12", default-features = false, features = ["readonly"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-cli-support = "0.2"
