[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
burn_p2p_app = { workspace = true, features = ["readonly"] }
clap.workspace = true
serde_json.workspace = true
wasm-bindgen-cli-support.workspace = true

[lints]
workspace = true
