[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
burn_p2p.workspace = true
burn_p2p_app = { workspace = true, features = ["readonly"] }
burn_p2p_browser.workspace = true
burn_p2p_core.workspace = true
clap.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-cli-support.workspace = true

[lints]
workspace = true
