[package]
name = "burn_dragon_checkpoint"
description = "Shared checkpoint and deployment utilities for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = []

[dependencies]
anyhow.workspace = true
burn = { workspace = true, features = ["std"] }
burn_dragon_time.workspace = true
burn-store = { workspace = true, features = ["std", "burnpack", "safetensors"] }
ciborium = "0.2"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq = "2.10"

[dev-dependencies]
burn = { workspace = true, features = ["std", "ndarray"] }
burn-ndarray.workspace = true
tempfile.workspace = true

[lints]
workspace = true
