[package]
name = "burn_dragon_core"
description = "burn dragon core model and utilities"
version = "0.21.0-pre.12"
edition = "2024"
rust-version = "1.92"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "dragon",
  "language-model",
  "machine-learning",
]
categories = [
  "compression",
  "science",
  "science::neuroscience",
]
homepage = "https://github.com/mosure/burn_dragon"
repository = "https://github.com/mosure/burn_dragon"
readme = "../../README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

[features]
default = []

benchmark = [
  "burn/autotune",
  "burn/fusion",
  "dep:burn-autodiff",
  "dep:burn-cubecl",
  "dep:burn-wgpu",
]
probe = ["dep:burn-autodiff", "dep:burn-ndarray", "dep:clap", "dep:serde_json"]
train = ["burn/dataset", "dep:image", "dep:burn-cubecl", "dep:burn-wgpu"]
cuda = ["burn-cuda", "dep:burn-cubecl", "burn_dragon_kernel/cuda"]
viz = []
web = []

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
burn_dragon_kernel = { path = "../burn_dragon_kernel", version = "0.21.0-pre.12" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
burn-ndarray = { version = "0.21.0-pre.3", optional = true }
burn-autodiff = { version = "0.21.0-pre.3", optional = true }
burn-wgpu = { version = "0.21.0-pre.3", default-features = false, features = ["fusion", "std"], optional = true }
burn-cubecl = { version = "0.21.0-pre.3", default-features = false, features = ["std", "fusion"], optional = true }


[dependencies.burn]
version = "0.21.0-pre.3"
default-features = false
features = [
  # "autotune",
  "fusion",
  "ndarray",
  "std",
  # "vulkan",
  # "webgpu",
  "wgpu",
]

[dependencies.burn-cuda]
version = "0.21.0-pre.3"
optional = true
default-features = false
features = [
  "std",
]


[dev-dependencies]
burn-autodiff = "0.21.0-pre.3"
burn-ndarray = "0.21.0-pre.3"
burn-wgpu = { version = "0.21.0-pre.3", default-features = false, features = ["fusion", "std"] }
burn-cubecl = { version = "0.21.0-pre.3", default-features = false, features = ["std"] }
serde_json = "1.0"
tempfile = "3"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
