[package]
name = "burn_dragon_core"
description = "burn dragon core model and utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords = [
  "burn",
  "dragon",
  "language-model",
  "machine-learning",
]
categories = [
  "compression",
  "science",
  "science::neuroscience",
]
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

[features]
default = []
benchmark = [
  "burn/autotune",
  "burn/fusion",
  "dep:burn-autodiff",
  "dep:burn-cubecl",
  "dep:burn-wgpu",
]
probe = ["dep:burn-autodiff", "dep:burn-ndarray", "dep:clap", "dep:serde_json"]
train = ["burn/dataset", "dep:image", "dep:burn-cubecl", "dep:burn-wgpu"]
cuda = ["burn-cuda", "dep:burn-cubecl", "burn_dragon_kernel/cuda"]
viz = []
web = []

[dependencies]
anyhow.workspace = true
burn = { workspace = true, features = ["fusion", "ndarray", "std", "wgpu"] }
burn-autodiff = { workspace = true, optional = true }
burn-cubecl = { workspace = true, optional = true, features = ["std", "fusion"] }
burn-cuda = { workspace = true, optional = true, features = ["std"] }
burn-ndarray = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true, features = ["fusion", "std"] }
burn_dragon_kernel.workspace = true
clap = { workspace = true, optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
rand.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
burn-autodiff.workspace = true
burn-cubecl = { workspace = true, features = ["std"] }
burn-ndarray.workspace = true
burn-wgpu = { workspace = true, features = ["fusion", "std"] }
serde_json.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[lints]
workspace = true
