[package]
name = "burn_dragon_kernel"
description = "Fused GPU kernel crate for burn_dragon execution paths"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["burn", "cuda", "kernel", "recurrent"]
categories = ["science", "science::neuroscience"]
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = []
cuda = ["dep:burn-cuda", "dep:cudarc"]

[dependencies]
burn = { workspace = true, features = ["fusion", "ndarray", "std", "wgpu"] }
burn-autodiff.workspace = true
burn-cubecl = { workspace = true, features = ["std", "fusion"] }
burn-cuda = { workspace = true, optional = true, features = ["std"] }
burn-fusion = { workspace = true, features = ["std"] }
burn-ir.workspace = true
burn-std.workspace = true
burn-wgpu = { workspace = true, features = ["fusion", "std", "template"] }
burn_dragon_time.workspace = true
cudarc = { version = "0.17.8", features = ["cuda-version-from-build-system"], optional = true }
pollster = "0.3"
serde.workspace = true
serde_json.workspace = true
wgpu = "26"

[dev-dependencies]
burn-ndarray.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[lints]
workspace = true
