[package]
name = "burn_dragon_language"
description = "Language modeling components for burn_dragon"
version = "0.21.0-pre.12"
edition = "2024"
rust-version = "1.92"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mosure/burn_dragon"
repository = "https://github.com/mosure/burn_dragon"
readme = "../../README.md"

[features]
default = []
cli = []
ddp = ["train", "burn_dragon_train/ddp", "burn-train/ddp", "dep:burn-collective"]
probe = ["burn_dragon_core/probe"]
train = [
  "burn/dataset",
  "dep:burn_dragon_checkpoint",
  "burn_dragon_core/train",
  "burn_dragon_train/train",
  "dep:burn-autodiff",
  "dep:burn-ndarray",
  "dep:burn-train",
  "dep:toml",
  "dep:ureq",
  "dep:hf-hub",
  "dep:csv",
  "dep:parquet",
  "dep:tracing",
  "dep:flate2",
  "dep:tar",
  "dep:rayon",
  "dep:sha2",
  "dep:memmap2",
  "dep:tempfile",
  "dep:burn_dragon_universality",
]
rerun = ["train", "dep:rerun", "dep:urlencoding"]
cuda = ["burn-cuda", "burn_dragon_core/cuda", "burn_dragon_train/cuda"]
viz = ["burn_dragon_core/viz"]
web = ["burn_dragon_core/web"]

[dependencies]
burn_dragon_checkpoint = { path = "../burn_dragon_checkpoint", version = "0.21.0-pre.12", default-features = false, optional = true }
burn_dragon_core = { path = "../burn_dragon_core", version = "0.21.0-pre.12", default-features = false }
burn_dragon_tokenizer = { path = "../burn_dragon_tokenizer", version = "0.21.0-pre.12" }
burn_dragon_train = { path = "../burn_dragon_train", version = "0.21.0-pre.12", default-features = false, optional = true }
burn_dragon_universality = { path = "../burn_dragon_universality", version = "0.21.0-pre.12", default-features = false, optional = true }

anyhow = "1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.5"
fancy-regex = "0.16"
toml = { version = "0.9", optional = true }
ureq = { version = "2.9", features = ["tls"], optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }
csv = { version = "1.3", optional = true }
parquet = { version = "53", optional = true }
tracing = { version = "0.1", optional = true }
flate2 = { version = "1.1", optional = true }
tar = { version = "0.4", optional = true }
rayon = { version = "1.11", optional = true }
sha2 = { version = "0.10", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }
rerun = { version = "0.30.2", default-features = false, features = ["sdk", "server"], optional = true }
urlencoding = { version = "2.1", optional = true }
hashbrown = "0.16"

burn = { version = "0.21.0-pre.3", default-features = false, features = ["fusion", "ndarray", "std", "wgpu"] }
burn-autodiff = { version = "0.21.0-pre.3", optional = true }
burn-ndarray = { version = "0.21.0-pre.3", optional = true }
burn-train = { version = "0.21.0-pre.3", optional = true, default-features = false }
burn-collective = { version = "0.21.0-pre.3", optional = true }
burn-cuda = { version = "0.21.0-pre.3", optional = true, default-features = false, features = ["std"] }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
burn-autodiff = "0.21.0-pre.3"
burn-ndarray = "0.21.0-pre.3"
burn-wgpu = { version = "0.21.0-pre.3", default-features = false, features = ["fusion", "std"] }
tempfile = "3"
