[package]
name = "burn_dragon_language"
description = "Language modeling components for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = []
cli = []
ddp = ["train", "burn_dragon_train/ddp", "burn-train/ddp", "dep:burn-collective"]
probe = ["burn_dragon_core/probe"]
train = [
  "burn/dataset",
  "dep:burn_dragon_checkpoint",
  "burn_dragon_core/train",
  "burn_dragon_train/train",
  "dep:burn-autodiff",
  "dep:burn-ndarray",
  "dep:burn-train",
  "dep:toml",
  "dep:ureq",
  "dep:hf-hub",
  "dep:csv",
  "dep:parquet",
  "dep:tracing",
  "dep:flate2",
  "dep:tar",
  "dep:rayon",
  "dep:sha2",
  "dep:memmap2",
  "dep:tempfile",
  "dep:burn_dragon_universality",
]
rerun = ["train", "dep:rerun", "dep:urlencoding"]
cuda = ["burn-cuda", "burn_dragon_core/cuda", "burn_dragon_train/cuda"]
viz = ["burn_dragon_core/viz"]
web = ["burn_dragon_core/web"]

[dependencies]
anyhow.workspace = true
burn = { workspace = true, features = ["fusion", "ndarray", "std", "wgpu"] }
burn-autodiff = { workspace = true, optional = true }
burn-collective = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true, features = ["std"] }
burn-ndarray = { workspace = true, optional = true }
burn-train = { workspace = true, optional = true }
burn_dragon_checkpoint = { workspace = true, default-features = false, optional = true }
burn_dragon_core = { workspace = true, default-features = false }
burn_dragon_tokenizer.workspace = true
burn_dragon_train = { workspace = true, default-features = false, optional = true }
burn_dragon_universality = { workspace = true, default-features = false, optional = true }
csv = { version = "1.3", optional = true }
fancy-regex = "0.16"
flate2 = { version = "1.1", optional = true }
hashbrown.workspace = true
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }
indexmap = "2.5"
memmap2 = { workspace = true, optional = true }
parquet = { version = "53", optional = true }
rand.workspace = true
rayon = { workspace = true, optional = true }
rerun = { version = "0.30.2", default-features = false, features = ["sdk", "server"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
tar = { version = "0.4", optional = true }
tempfile = { workspace = true, optional = true }
toml = { version = "0.9", optional = true }
tracing = { version = "0.1", optional = true }
ureq = { version = "2.9", features = ["tls"], optional = true }
urlencoding = { version = "2.1", optional = true }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
burn-autodiff.workspace = true
burn-ndarray.workspace = true
burn-wgpu = { workspace = true, features = ["fusion", "std"] }
criterion = { version = "0.7", features = ["html_reports"] }
tempfile.workspace = true

[lints]
workspace = true
