[package]
name = "burn_dragon_p2p"
description = "Peer-to-peer experiment integration for burn_dragon language training"
version.workspace = true
build = "build.rs"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = ["native"]
native = [
  "dep:burn-autodiff",
  "dep:burn-ndarray",
  "dep:burn-train",
  "dep:burn_dragon_language",
  "dep:burn_dragon_train",
  "dep:burn_dragon_universality",
  "dep:reqwest",
]
wasm-peer = [
  "wasm-ui",
  "dep:burn-autodiff",
  "dep:burn_dragon_core",
  "dep:burn_dragon_universality",
]
wgpu = ["dep:burn-wgpu"]
cuda = [
  "native",
  "burn_dragon_language/cuda",
  "dep:burn-cuda",
]
wasm-ui = [
  "dep:burn_p2p_app",
  "dep:burn_p2p_browser",
  "dep:dioxus",
  "dep:gloo-net",
  "dep:gloo-timers",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]

[dependencies]
anyhow.workspace = true
burn = { workspace = true, features = ["fusion", "ndarray", "std", "wgpu"] }
burn-autodiff = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true, features = ["std"] }
burn-ndarray = { workspace = true, optional = true }
burn-train = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true, features = ["fusion", "std", "webgpu"] }
burn_dragon_core = { workspace = true, optional = true, default-features = false }
burn_dragon_time.workspace = true
burn_dragon_universality = { workspace = true, optional = true, default-features = false }
burn_p2p.workspace = true
burn_p2p_admin.workspace = true
burn_p2p_app = { workspace = true, optional = true, features = ["readonly"] }
burn_p2p_browser = { workspace = true, optional = true }
burn_p2p_workload.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
log = "0.4"
libp2p-identity = "0.2.13"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml = "0.8"
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn_dragon_language = { workspace = true, optional = true, default-features = false, features = ["train"] }
burn_dragon_train = { workspace = true, optional = true, default-features = false, features = ["train"] }
burn_p2p = { workspace = true, default-features = false, features = ["burn"] }
burn_p2p_bootstrap.workspace = true
burn_p2p_core.workspace = true
ctrlc = "3.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "signal", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
burn_p2p_browser = { workspace = true, optional = true }
burn_p2p_core.workspace = true
burn_p2p_dataloader.workspace = true
console_log = "1"
console_error_panic_hook = "0.1"
dioxus = { version = "0.7.4", optional = true, default-features = false, features = ["lib", "web"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
gloo-net = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Document", "HtmlInputElement", "Location", "Storage", "Window"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
burn_p2p_browser.workspace = true
burn_p2p_core.workspace = true
tempfile.workspace = true
tiny_http = "0.12"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "burn_dragon_p2p_native"
path = "src/bin/burn_dragon_p2p_native.rs"
required-features = ["native"]

[[bin]]
name = "burn_dragon_p2p_browser"
path = "src/bin/burn_dragon_p2p_browser.rs"
required-features = ["wasm-ui", "wasm-peer"]

[lints]
workspace = true
