[package]
name = "burn_dragon_time"
description = "Shared native/wasm time helpers for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
web-time.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[lints]
workspace = true
