[package]
name = "burn_dragon_tokenizer"
description = "Tokenizer primitives for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "MIT"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
ahash = "0.8.12"
compact_str = "0.9.0"
dary_heap = "0.3"
fancy-regex = "0.16.1"
indexmap = "2.2"
log = "0.4.28"
pyo3 = { version = "0.27", optional = true }
pyo3-log = { version = "0.13", optional = true }
rayon.workspace = true

[dev-dependencies]
criterion = "0.5"

[features]
default = []
python-bindings = ["dep:pyo3", "dep:pyo3-log"]
extension-module = ["python-bindings", "pyo3/extension-module"]

[lints]
workspace = true
