[package]
name = "burn_dragon_train"
description = "Training utilities for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = []
benchmark = ["burn/autotune", "burn/fusion"]
ddp = ["train", "dep:burn-collective", "dep:burn-communication", "burn-train/ddp"]
cli = [
  "train",
  "dep:burn-autodiff",
  "dep:burn-ndarray",
  "dep:burn-train",
  "dep:clap",
  "dep:names",
  "dep:tracing-appender",
  "dep:tracing-subscriber",
]
train = [
  "burn/dataset",
  "dep:burn-autodiff",
  "dep:burn-ndarray",
  "dep:burn-train",
  "dep:names",
  "dep:tracing",
  "dep:image",
  "dep:toml",
]
cuda = ["burn-cuda"]
integration_test = ["train"]

[dependencies]
anyhow.workspace = true
burn = { workspace = true, features = ["fusion", "ndarray", "std", "wgpu"] }
burn-autodiff = { workspace = true, optional = true }
burn-collective = { workspace = true, optional = true }
burn-communication = { workspace = true, optional = true }
burn-cubecl = { workspace = true, features = ["std", "fusion"] }
burn-cuda = { workspace = true, optional = true, features = ["std"] }
burn-fusion = { workspace = true, features = ["std"] }
burn-ir.workspace = true
burn-ndarray = { workspace = true, optional = true }
burn-train = { workspace = true, optional = true }
burn-wgpu = { workspace = true, features = ["fusion", "std"] }
burn_dragon_core = { workspace = true, default-features = false, features = ["train"] }
clap = { workspace = true, optional = true }
hashbrown.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
names = { version = "0.14", optional = true }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { version = "0.9", optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
burn_dino = { version = "0.7", default-features = false, optional = true }

[dev-dependencies]
avirus = "0.2"
burn-ndarray.workspace = true
criterion = { version = "0.7", features = ["html_reports"] }
tempfile.workspace = true

[lints]
workspace = true
