[package]
name = "burn_dragon_universality"
description = "Synthetic universality and NCA corpus generation for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
burn_dragon_tokenizer.workspace = true
flate2 = "1"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.9"

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[lints]
workspace = true
