[package]
name = "burn_dragon_universality"
description = "Synthetic universality and NCA corpus generation for burn_dragon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
burn_dragon_tokenizer.workspace = true
clap = { workspace = true, optional = true, features = ["derive"] }
flate2 = "1"
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml = "0.9"

[features]
default = []
cli = ["dep:clap"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "bd-ruliad"
path = "src/bin/bd-ruliad.rs"
required-features = ["cli"]

[[bench]]
name = "ruliad"
harness = false

[lints]
workspace = true
